PhpMyAdmin/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
