PhpMyAdmin/http-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
    - http:
        paths:
          - path: /phpmyadmin
            backend:
              serviceName: phpmyadmin
              servicePort: 80
